Removing more unnecessary stuff

--- a/index.html
+++ b/index.html
@@ -4,14 +4,11 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
   <link href='https://fonts.googleapis.com/css?family=Roboto Mono' rel='stylesheet'>
-  <!-- <link href="//db.onlinewebfonts.com/c/031da03967812d134ed68febd3ba78a9?family=GT+America" rel="stylesheet" type="text/css"/> -->
-  <title>Test BLE</title>
+  <title>ESS Brain Sketchpad</title>
 </head>
-<!-- Load in the d3 library -->
-<!-- <script src="https://d3js.org/d3.v5.min.js"></script> -->
+
 <script src="d3.v5.min.js"></script>
 <script src="bleserial.js"></script>
-<!-- <script src="keybinding.js"></script> -->
 <script src="vibrationControl.js"></script>
 <script src="accessServer.js"></script>
 
@@ -188,7 +185,7 @@
         <label>Occupation</label>
         <input type="text" id="occupation" value="" />
         <br>
-        <label>Can you use 5 adjectives to describehow you felt</label>
+        <label>Can you use 5 adjectives to describe how you felt</label>
         <textarea id="textNotes" rows="2" cols="40">Leave some notes</textarea>
         <br>
         <br>
@@ -240,9 +237,6 @@
       </div>
     </div>
 
-
 </body>
-
-
 
 </html>
